# pyslpheat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  frontend.py  pyproject.toml
docs/: DOCUMENTATION.md
examples/: bdew_demo.py  vdi4655_demo.py
pyslpheat/: __init__.py  bdew.py  frontend.py  vdi4655.py
pyslpheat/data/bdew/: daily_coefficients.csv
